# NumberPlateRecognition

./: CMakeLists.txt  Documentatie.docx  README.md  main.cpp
src/: functions.cpp  functions.h
testing/: ground_truth.txt  testing.cpp  testing.h
